<resources>
    <string name="app_name">Cofco Movie</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="title_movies">Avenger Infinity</string>
    <string name="vote_average">7.5</string>
    <string name="avenger_infinity">Avenger Infinity</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>
    <string name="favorite">Add to Favorite</string>
    <string name="delete">Delete from Favorite</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="action_favorite">Favorite Movie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_detail">Reminder for return to app</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="release_reminder_detail">Reminder showing the movie that released today</string>
    <string name="message_notif_daily">Please come back to App Catalogue Movie</string>
    <string name="message_notif_release">New movie has been release today!</string>
    <string name="reminder">Reminder</string>
    <string name="language">Language</string>
    <string name="change_language_setting">Change Language Settings</string>
    <string name="detail_language">Language in your application</string>
    <string name="search_hint">Input title movie</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">NO_DATA</string>
    <string name="todo">TODO</string>
</resources>
