<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activity.SettingsActivity">

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/language"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/linear_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_language"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:ignore="UselessLeaf">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:text="@string/change_language_setting"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:text="@string/detail_language"
            android:textColor="@color/colorSemiWhite"
            android:textSize="14sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_language"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/reminder"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_daily_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_reminder"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/daily_reminder"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_daily_reminder_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_daily_reminder"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="5dp"
        android:text="@string/daily_reminder_detail"
        android:textColor="@color/colorSemiWhite"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <Switch
        android:id="@+id/switch_daily"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tv_daily_reminder"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tv_release_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_daily_reminder_detail"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/release_reminder"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_release_reminder_detail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_release_reminder"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="5dp"
        android:maxLines="2"
        android:text="@string/release_reminder_detail"
        android:textColor="@color/colorSemiWhite"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <Switch
        android:id="@+id/switch_release"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tv_release_reminder"
        android:layout_marginEnd="@dimen/activity_vertical_margin"/>

</RelativeLayout>