<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activity.DetailActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessLeaf">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_photo_received"
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription"
            tools:src="@drawable/poster_avengerinfinity"/>

        <TextView
            android:id="@+id/tv_name_received"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_photo_received"
            tools:text="@string/avenger_infinity" />

        <TextView
            android:background="@color/colorPrimary"
            android:id="@+id/tv_score_received"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:drawableStart="@drawable/ic_star_yellow_16dp"
            android:padding="3dp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_name_received"
            app:layout_constraintTop_toBottomOf="@+id/img_photo_received"
            tools:text="@string/vote_average" />

        <TextView
            android:id="@+id/tv_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/release_date"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_received"
            tools:text="@string/release_date" />

        <TextView
            android:id="@+id/tv_release_received"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorSemiWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_release"
            tools:text="@string/release_date" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/overview"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_received"
            tools:text="@string/overview" />

        <TextView
            android:id="@+id/tv_overview_received"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorSemiWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview"
            tools:text="@string/overview" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="310dp"
                android:layout_height="60dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/delete_favorite"
                android:paddingBottom="5dp"
                android:paddingEnd="50dp"
                android:text="@string/delete"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview_received"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/btn_favorite"
                android:layout_width="310dp"
                android:layout_height="60dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/add_favorite"
                android:paddingBottom="5dp"
                android:paddingEnd="50dp"
                android:text="@string/favorite"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview_received"
                tools:ignore="RtlSymmetry" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>